--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "q": "^1.4.1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
     "chai": "^3.4.1",
     "chai-things": "^0.2.0",
     "expect": "^1.13.4",
