--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "winston": "^2.1.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
