--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A JS implementation of Provider Pact",
   "main": "index.js",
   "scripts": {
-    "preinstall": "bundle install",
-    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --reporter list --recursive --compilers js:babel-core/register"
+    "preinstall": "bundle install && npm run compile",
+    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --reporter list --recursive --compilers js:babel-core/register",
+    "compile": "babel -d lib/ src/",
+    "prepublish": "npm run compile"
   },
   "keywords": [
     "pact",
