--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "preinstall": "bundle install && npm run compile",
     "test": "NODE_ENV=test node_modules/mocha/bin/mocha --reporter list --recursive --compilers js:babel-core/register",
-    "compile": "babel -d lib/ src/",
+    "compile": "babel -d ./lib/ ./src/",
     "prepublish": "npm run compile"
   },
   "keywords": [
