--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A JS implementation of Provider Pact",
   "main": "index.js",
   "scripts": {
-    "preinstall": "bundle install && npm run compile",
+    "preinstall": "bundle install",
+    "postinstall": "npm run compile",
     "test": "NODE_ENV=test node_modules/mocha/bin/mocha --reporter list --recursive --compilers js:babel-core/register",
     "compile": "./node_modules/.bin/babel-node -d ./lib/ ./src/",
     "prepublish": "npm run compile"
