--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "babel-core": "^6.4.0",
     "babel-plugin-transform-class-properties": "^6.4.0",
     "body-parser": "^1.14.2",
+    "child-process-promise": "^1.1.0",
     "express": "^4.13.3",
+    "lodash": "^4.0.0",
     "morgan": "^1.6.1",
     "q": "^1.4.1",
     "winston": "^2.1.1"
