--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pact-js-provider",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A JS implementation of Provider Pact",
   "main": "index.js",
   "scripts": {
-    "preinstall": "bundle install && npm run compile",
+    "preinstall": "bundle install",
     "test": "NODE_ENV=test node_modules/mocha/bin/mocha --reporter list --recursive --compilers js:babel-core/register",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
