--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pact-js-provider",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "A JS implementation of Provider Pact",
-  "main": "index_es6.js",
+  "main": "index.js",
   "scripts": {
     "preinstall": "bundle install --path .bundle",
     "test": "NODE_ENV=test node_modules/mocha/bin/mocha --reporter list --recursive --compilers js:babel-core/register",
